# kslack

./: .gitignore  Dockerfile  Makefile  README.md  SLACK_SETUP.md  pyproject.toml  slack-app-manifest.yaml
.github/workflows/: ci.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
examples/: README.md  basic.yaml  production.yaml  with-rbac.yaml
src/kslack/: config.py
src/kslack/handlers/: actions.py  mentions.py  middleware.py
src/kslack/services/: a2a_client.py  agent_discovery.py
src/kslack/slack/: formatters.py
tests/: __init__.py  conftest.py  test_agent_router.py  test_config.py  test_slack_validators.py
